<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:background="@color/colorFondo">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_marginStart="2dp"
                android:layout_marginTop="3dp"
                android:id="@+id/cvMenu1"
                android:layout_width="80dp"
                android:layout_height="35dp"
                app:cardBackgroundColor="@color/colorCard1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu1"
                    android:textSize="14sp"
                    android:textColor="@color/colorTitulo1"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="6dp"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginStart="4dp"
                android:layout_marginTop="3dp"
                android:id="@+id/cvMenu2"
                android:layout_width="80dp"
                android:layout_height="35dp"
                app:cardBackgroundColor="@color/colorCard1"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu2"
                    android:textSize="14sp"
                    android:textColor="@color/colorTitulo1"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="6dp"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginStart="4dp"
                android:layout_marginTop="3dp"
                android:id="@+id/cvMenu3"
                android:layout_width="80dp"
                android:layout_height="35dp"
                app:cardBackgroundColor="@color/colorCard1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu3"
                    android:textSize="14sp"
                    android:textColor="@color/colorTitulo1"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="6dp"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginStart="4dp"
                android:layout_marginEnd="2dp"
                android:layout_marginTop="3dp"
                android:id="@+id/cvMenu4"
                android:layout_width="80dp"
                android:layout_height="35dp"
                app:cardBackgroundColor="@color/colorCard1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu4"
                    android:textSize="14sp"
                    android:textColor="@color/colorTitulo1"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="6dp"
                    />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/logo"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/logo"
        android:contentDescription="@string/descripcion" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu4"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorCard2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        >

        <ImageButton
            android:id="@+id/facebook"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@mipmap/logo_facebook"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/descripcion"
            />

        <ImageButton
            android:id="@+id/twitter"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@mipmap/logo_twitter"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/descripcion"
            />

        <ImageButton
            android:id="@+id/instagram"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@mipmap/logo_instagram"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/descripcion"
            />


    </LinearLayout>

    <TextView
        android:id="@+id/txvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="170dp"
        android:text="@string/nombre"
        android:textColor="@color/colorTitulo1"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txvCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="250dp"
        android:text="@string/correo"
        android:textColor="@color/colorTitulo1"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txvComent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="330dp"
        android:text="@string/comentarios"
        android:textColor="@color/colorTitulo1"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etxCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="280dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text=""
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etxNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="200dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/etxComent"
        android:layout_width="333dp"
        android:layout_height="71dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="362dp"
        android:layout_marginEnd="38dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text=""
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/marcar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etxComent"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="37dp"
        android:text="@string/marcar"
        app:layout_constraintTop_toBottomOf="@id/etxComent" />

    <Button
        android:id="@+id/enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etxComent"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="243dp"
        android:layout_marginBottom="-181dp"
        android:text="@string/enviar"
        app:layout_constraintTop_toBottomOf="@id/etxComent" />

</RelativeLayout>