<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:background="@color/colorFondo">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_marginStart="2dp"
                android:layout_marginTop="3dp"
                android:id="@+id/cvMenu1"
                android:layout_width="80dp"
                android:layout_height="35dp"
                app:cardBackgroundColor="@color/colorCard1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu1"
                    android:textSize="14sp"
                    android:textColor="@color/colorTitulo1"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="6dp"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginStart="4dp"
                android:layout_marginTop="3dp"
                android:id="@+id/cvMenu2"
                android:layout_width="80dp"
                android:layout_height="35dp"
                app:cardBackgroundColor="@color/colorCard1"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu2"
                    android:textSize="14sp"
                    android:textColor="@color/colorTitulo1"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="6dp"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginStart="4dp"
                android:layout_marginTop="3dp"
                android:id="@+id/cvMenu3"
                android:layout_width="80dp"
                android:layout_height="35dp"
                app:cardBackgroundColor="@color/colorCard1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu3"
                    android:textSize="14sp"
                    android:textColor="@color/colorTitulo1"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="6dp"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginStart="4dp"
                android:layout_marginEnd="2dp"
                android:layout_marginTop="3dp"
                android:id="@+id/cvMenu4"
                android:layout_width="80dp"
                android:layout_height="35dp"
                app:cardBackgroundColor="@color/colorCard1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu4"
                    android:textSize="14sp"
                    android:textColor="@color/colorTitulo1"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="6dp"
                    />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="60dp"
        app:cardCornerRadius="4dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorFondo">

            <AbsoluteLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:layout_margin="3dp"
                >

                <ImageView
                    android:id="@+id/ivEmpresariales"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_x="10dp"
                    android:layout_y="50dp"
                    android:contentDescription="@string/descripcion"
                    android:src="@mipmap/empresariales1" />

                <TextView
                    android:id="@+id/txvEmpresariales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_x="10dp"
                    android:layout_y="10dp"
                    android:text="@string/sub1"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/txvDescEmpresariales"
                    android:layout_width="245dp"
                    android:layout_height="143dp"
                    android:layout_margin="5dp"
                    android:layout_x="145dp"
                    android:layout_y="10dp"
                    android:text="@string/empresariales"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    android:textAlignment="inherit"/>

            </AbsoluteLayout>

            <AbsoluteLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:layout_margin="3dp"
                >

                <ImageView
                    android:id="@+id/ivSociales"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_x="10dp"
                    android:layout_y="50dp"
                    android:contentDescription="@string/descripcion"
                    android:src="@mipmap/sociales" />

                <TextView
                    android:id="@+id/txvSociales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_x="10dp"
                    android:layout_y="10dp"
                    android:text="@string/sub2"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/txvDescSociales"
                    android:layout_width="245dp"
                    android:layout_height="143dp"
                    android:layout_margin="5dp"
                    android:layout_x="145dp"
                    android:layout_y="10dp"
                    android:text="@string/sociales"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    android:textAlignment="inherit"/>

            </AbsoluteLayout>
            <AbsoluteLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:layout_margin="3dp"
                >

                <ImageView
                    android:id="@+id/ivPublicitarios"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_x="10dp"
                    android:layout_y="50dp"
                    android:contentDescription="@string/descripcion"
                    android:src="@mipmap/publicitarios" />

                <TextView
                    android:id="@+id/txvPublicitarios"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_x="10dp"
                    android:layout_y="10dp"
                    android:text="@string/sub3"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/txvDescPublicitarios"
                    android:layout_width="245dp"
                    android:layout_height="143dp"
                    android:layout_margin="5dp"
                    android:layout_x="145dp"
                    android:layout_y="10dp"
                    android:text="@string/publicitarios"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    android:textAlignment="inherit"/>

            </AbsoluteLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        >

        <ImageButton
            android:id="@+id/facebook"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@mipmap/logo_facebook"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/descripcion"
            />

        <ImageButton
            android:id="@+id/twitter"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@mipmap/logo_twitter"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/descripcion"
            />

        <ImageButton
            android:id="@+id/instagram"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@mipmap/logo_instagram"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/descripcion"
            />


    </LinearLayout>

</RelativeLayout>