<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:background="@color/colorFondo">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_marginStart="2dp"
                android:layout_marginTop="3dp"
                android:id="@+id/cvMenu1"
                android:layout_width="80dp"
                android:layout_height="35dp"
                app:cardBackgroundColor="@color/colorCard1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu1"
                    android:textSize="14sp"
                    android:textColor="@color/colorTitulo1"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="6dp"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginStart="4dp"
                android:layout_marginTop="3dp"
                android:id="@+id/cvMenu2"
                android:layout_width="80dp"
                android:layout_height="35dp"
                app:cardBackgroundColor="@color/colorCard1"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu2"
                    android:textSize="14sp"
                    android:textColor="@color/colorTitulo1"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="6dp"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginStart="4dp"
                android:layout_marginTop="3dp"
                android:id="@+id/cvMenu3"
                android:layout_width="80dp"
                android:layout_height="35dp"
                app:cardBackgroundColor="@color/colorCard1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu3"
                    android:textSize="14sp"
                    android:textColor="@color/colorTitulo1"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="6dp"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginStart="4dp"
                android:layout_marginEnd="2dp"
                android:layout_marginTop="3dp"
                android:id="@+id/cvMenu4"
                android:layout_width="80dp"
                android:layout_height="35dp"
                app:cardBackgroundColor="@color/colorCard1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu4"
                    android:textSize="14sp"
                    android:textColor="@color/colorTitulo1"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="6dp"
                    />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:layout_width="450dp"
        android:layout_height="450dp"
        android:src="@mipmap/logo"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/logo"
        android:contentDescription="@string/descripcion" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@color/colorCard1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="460dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        >

        <ImageButton
            android:id="@+id/facebook"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@mipmap/logo_facebook"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/descripcion"
            />

        <ImageButton
            android:id="@+id/twitter"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@mipmap/logo_twitter"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/descripcion"
            />

        <ImageButton
            android:id="@+id/instagram"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@mipmap/logo_instagram"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/descripcion"
            />


    </LinearLayout>

</RelativeLayout>